# veaiops

./: .coveragerc  .env_template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: deploy-docs.yaml  license-header-check.yaml  pre-commit.yml  unit-test.yaml
.husky/: commit-msg  pre-commit
charts/veaiops/: Chart.yaml  README.md  values.yaml
charts/veaiops/templates/: NOTES.txt  _helpers.tpl  env-configmap.yaml  ingress.yaml
docker/backend/: Dockerfile
docker/chatops/: Dockerfile
docker/develop/: docker-compose.yml
docker/develop/conf/: prometheus.yml  (+2 more)
docker/frontend/: Dockerfile
docker/initial/: Dockerfile
docker/intelligent-threshold/: Dockerfile
docs/: package.json
docs/content/: index.md
frontend/: .eslintrc.js  .lintstagedrc.js  biome.json  commitlint.config.js  cspell.config.cjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  tsconfig.app.json  tsconfig.base.json  tsconfig.json
frontend/styles/: globals.css
tests/: conftest.py  utils.py
tests/auth/: conftest.py  test_authentication.py  test_middleware.py  test_tokens.py  test_verify_token.py  utils.py
tests/cache/: conftest.py  test_bot_client.py  test_volcengine_metric.py  test_volcengine_product.py
tests/channel/: conftest.py  test_base_channel.py  test_lark.py  test_message_channel.py  test_registry.py  test_webhook_channel.py  utils.py
tests/cmd/: conftest.py
tests/handler/: conftest.py
tests/lifespan/: conftest.py  test_cache.py  test_db.py  test_otel.py
tests/metrics/: conftest.py  test_aliyun.py  test_base.py  test_datasource_factory.py  test_volcengine.py  test_zabbix.py
tests/schema/: test_chat_schema.py  test_config_schema.py
tests/utils/: conftest.py  test_app.py  test_bot_utils.py  test_client.py  test_crypto.py  test_embedding.py  test_kb.py  test_log.py  test_message.py  test_pagination.py  test_webhook_utils.py
veaiops/: LICENSE_HEADER.txt
veaiops/cache/: __init__.py  bot_client.py  volcengine_metric.py  volcengine_product.py
veaiops/channel/: __init__.py  registry.py  webhook.py
veaiops/handler/: __init__.py
veaiops/lifespan/: __init__.py  cache.py  db.py  otel.py
veaiops/metrics/: __init__.py  aliyun.py  base.py  datasource_factory.py  timeseries.py  volcengine.py  zabbix.py
veaiops/schema/: types.py
veaiops/settings/: __init__.py  configs.py  registry.py
veaiops/utils/: app.py  bot.py  client.py  crypto.py  embedding.py  kb.py  log.py  message.py  pagination.py  webhook.py
(+1751 files in other folders)
